# GrafikaKomputerowa

./: AGENTS.md  convert_to_pdf.py  pyproject.toml
.github/agents/: lab-creator.agent.md
lab1/: laboratorium_0.ipynb
lab2/: Labolatorium 2.ipynb
lab3/: Labolatorium 3.ipynb
lab4/: Labolatorium 4.ipynb  Persp.m  RPYT.m  linia1.m
lab5/: Labolatorium 5.ipynb
lab6/: Labolatorium 6.ipynb
